--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,13 +1,3 @@
-
-@media screen and (min-width: 375px) and (max-width: 768px) {
-    .hero_container {
-       max-width: 375px;
-       margin: 0 auto;
-    
-}
-}
-
-
 .section_hero {
     background-image: linear-gradient(
       var(--opacity-neutral-darkest-50),
@@ -53,22 +43,15 @@
 
 
 @media (min-width: 768px) {
-    .hero_container {
-        width: 100%;
-        max-width: 704px;
-        margin: 0 auto;
-         margin: 0;
-    }
-    
      .section_hero {
-      
-        padding: 36px 0;
+      padding: 36px 0;
          background-image: linear-gradient(
       var(--opacity-neutral-darkest-50),
         var(--opacity-neutral-darkest-50)
     ),
       url("../img/hero/tab-bg@1x.webp");
      }
+
 @media (min-width: 768px) and (min-resolution: 2x) {
     .section_hero {
       background-image: linear-gradient(var(--opacity-neutral-darkest-50),
@@ -76,6 +59,7 @@
         url("../img/hero/tab-bg@2x.webp");
     }
   }
+
   .hero_title {
     font-size: 40px;
     max-width: 560px;
@@ -85,8 +69,6 @@
     font-size: 18px;
     max-width: 560px;
   }
-
-
 
 }
 @media (min-width: 1440px) {
